[gd_scene load_steps=6 format=3 uid="uid://dpr3ieskyliq5"]

[ext_resource type="Script" path="res://scenes/MainMenuScene.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Communicator.tscn" id="2"]
[ext_resource type="FontFile" path="res://assets/fonts/regular-big.tres" id="3"]
[ext_resource type="FontFile" path="res://assets/fonts/regular-medium.tres" id="4"]
[ext_resource type="FontFile" path="res://assets/fonts/regular.tres" id="5"]

[node name="MainMenuScene" type="Node2D"]
script = ExtResource("1")

[node name="Communicator" parent="." instance=ExtResource("2")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
offset_left = 350.0
offset_top = 100.0
offset_right = 650.0
offset_bottom = 150.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Το Κυνήγι της Αστικής Συνείδησης"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("5")
text = "'Εναρξη νέου παιχνιδιου"

[node name="ButtonContinue" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("5")
text = "Συνέχεια προηγούμενου παιχνιδιού"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("5")
text = "Έξοδος από το παιχνίδι"

[node name="LabelDeveloped" type="Label" parent="."]
offset_left = 12.0
offset_top = 572.0
offset_right = 404.0
offset_bottom = 586.0
theme_override_fonts/font = ExtResource("4")
text = "Υλοποιηση: Παπαδημητριου Σπυρος (Eu Gamer Jam)"

[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContinue" to="." method="_on_ButtonContinue_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
